fixed untracked files

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,7 +2,7 @@
 <html ng-app="demo">
   <head>
     <meta charset="utf-8">
-    <title>AngularJS directive demo</title>
+    <title>AngularJS directive demo</title>hjvjhv
 
     <!-- TODO: Include Angular from Bower components -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js"></script>
