Attempts at refactoring

--- a/demo/components.html
+++ b/demo/components.html
@@ -1,27 +1,27 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<!--<div ng-include="'components/navbar/navbar.html'"></div>-->
 
-<div class="po-docs-header" id="content" tabindex="-1">
-  <div class="container">
-    <h1>Components</h1>
-    <p>Reusable components built to provide iconography, dropdowns, input groups, navigation, alerts, and much more.</p>
-  </div>
-</div>
+<!--<div class="po-docs-header" id="content" tabindex="-1">-->
+  <!--<div class="container">-->
+    <!--<h1>Components</h1>-->
+    <!--<p>Reusable components built to provide iconography, dropdowns, input groups, navigation, alerts, and much more.</p>-->
+  <!--</div>-->
+<!--</div>-->
 
-<div class="container po-docs-container">
+<!--<div class="container po-docs-container">-->
 
-  <div class="row">
-    <div class="col-md-9" role="main">
+  <!--<div class="row">-->
+    <!--<div class="col-md-9" role="main">-->
 
-      <div ng-include="'app/components/inputs/po-inputs.html'"></div>
-      <div ng-include="'app/components/tables/po-tables.html'"></div>
-      <div ng-include="'app/components/alerts/po-alert-notification.html'"></div>
-      <div ng-include="'app/components/modals/modals.html'"></div>
-      <div ng-include="'app/components/tabs/tabs.html'"></div>
-      <div ng-include="'app/components/progress-bars/po-progress-bars.html'"></div>
-      <div ng-include="'app/components/loading-wheel/po-loading-wheel.html'"></div>
-    </div>
-    <div class="col-md-3" role="complementary" pod-sidebar></div>
-  </div>
-</div>
+      <!--<div ng-include="'app/components/inputs/po-inputs.html'"></div>-->
+      <!--<div ng-include="'app/components/tables/po-tables.html'"></div>-->
+      <!--<div ng-include="'app/components/alerts/po-alert-notification.html'"></div>-->
+      <!--<div ng-include="'app/components/modals/modals.html'"></div>-->
+      <!--<div ng-include="'app/components/tabs/tabs.html'"></div>-->
+      <!--<div ng-include="'app/components/progress-bars/po-progress-bars.html'"></div>-->
+      <!--<div ng-include="'app/components/loading-wheel/po-loading-wheel.html'"></div>-->
+    <!--</div>-->
+    <!--<div class="col-md-3" role="complementary" pod-sidebar></div>-->
+  <!--</div>-->
+<!--</div>-->
 
-<div ng-include="'components/footer/footer.html'"></div>
+<!--<div ng-include="'components/footer/footer.html'"></div>-->
