WIP  - most referencing errors fixed

--- a/src/mdd-input-error-framework.html
+++ b/src/mdd-input-error-framework.html
@@ -1,4 +1,4 @@
-<div class="mdd-notification-panel">
+<div class="mdd-input-error-framework">
   <div>The value is {{getValue()}}</div>
   <button ng-click="increment()">+</button>
 </div>
