--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,11 +5,11 @@
     <title>AngularJS directive demo</title>
 
     <!-- TODO: Include Angular from Bower components -->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-sanitize.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.js"></script>
     <link rel="stylesheet" href="../bower_components/highlightjs/styles/default.css" />
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css">
-    <link rel="stylesheet" href="../dist/mdd-notification-panel.css">
+    <link rel="stylesheet" href="../dist/mdd-input-error-framework.css">
     <link rel="stylesheet" href="demo.css">
   </head>
   <body>
@@ -18,8 +18,8 @@
 
       <div class="usage row">
         <h4>Simple usage</h4>
-        <p>This is a simple usage of mdalton456.mdd-notification-panel</p>
-        <pre>&lt;mdd-notification-panel&gt;&lt;/mdd-notification-panel&gt;</pre>
+        <p>This is a simple usage of mdalton456.mdd-input-error-framework</p>
+        <pre>&lt;mdd-input-error-framework&gt;&lt;/mdd-input-error-framework&gt;</pre>
         <div hljs>
           //example controller.js - This overrides default ng-required message
           $scope.postCodeReqErrorObj = {type: 'Alert', message: 'Please enter a Postcode in this box [Custom override example]'};
@@ -31,8 +31,10 @@
     <!--bower components-->
     <script src="../bower_components/highlightjs/highlight.pack.js"></script>
     <script src="../bower_components/angular-highlightjs/build/angular-highlightjs.js"></script>
+    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
-    <script src="../dist/mdd-notification-panel.js"></script>
+    <script src="../dist/mdd-input-error-framework.js"></script>
     <script src="demo.js"></script>
     <script src="inputs/inputs.controller.js"></script>
   </body>
